--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimary">#3663df</color>
     <color name="colorPrimaryDark">#234ec5</color>
     <color name="colorAccent">#7fd8f5</color>
+    <color name="colorOnPrimary">#ffffff</color>
 </resources>
