--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimary">#7f9cf5</color>
     <color name="colorPrimaryDark">#667eea</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorOnPrimary">#222</color>
 </resources>
