--- a/app/src/main/res/layout/fragment_card_details.xml
+++ b/app/src/main/res/layout/fragment_card_details.xml
@@ -8,7 +8,9 @@
     android:keepScreenOn="true">
 
     <androidx.cardview.widget.CardView
+        app:cardElevation="8dp"
         android:id="@+id/cardView_cardContainer"
+        app:cardCornerRadius="8dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
@@ -22,35 +24,47 @@
 
         <TextView
             android:id="@+id/textView_selectedCardInverted"
-            android:layout_width="379dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleY="1.2"
-            android:fontFamily="@font/roboto_mono"
-            app:autoSizeMaxTextSize="300dp"
-            app:autoSizeTextType="uniform"
             android:elevation="2dp"
+            android:fontFamily="sans-serif-condensed"
             android:gravity="top"
             android:maxLines="1"
+            android:scaleY="1.0"
             android:textColor="@color/colorOnPrimary"
             android:textSize="100sp"
-            tools:text="2" />
+            app:autoSizeMaxTextSize="300dp"
+            app:autoSizeTextType="uniform"
+            tools:text="0.5" />
 
         <TextView
             android:id="@+id/textView_selectedCard"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="top"
-            app:autoSizeMaxTextSize="300dp"
-            app:autoSizeTextType="uniform"
             android:elevation="2dp"
-            android:scaleY="1.2"
-            android:fontFamily="@font/roboto_mono"
+            android:fontFamily="sans-serif-condensed"
+            android:gravity="top"
+            android:maxLines="1"
             android:rotation="180"
+            android:scaleY="1.0"
             android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/colorOnPrimary"
-            tools:text="2"
+            app:autoSizeMaxTextSize="300dp"
+            app:autoSizeTextType="uniform"
+            tools:text="0.5"
             tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/textView_cardSelected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Card selected, tap to show" />
     </androidx.cardview.widget.CardView>
 
     <TextView
