--- a/app/src/main/res/layout/fragment_card_selection.xml
+++ b/app/src/main/res/layout/fragment_card_selection.xml
@@ -9,19 +9,19 @@
 
     <Button
         android:id="@+id/button13"
-        android:layout_margin="@dimen/card_selection_margin"
-        app:strokeColor="@color/colorPrimaryLight"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:textColor="@color/colorOnPrimary"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/card_selection_margin"
         android:text="☕"
+        android:textColor="@color/colorOnPrimary"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button12"
-        app:layout_constraintTop_toBottomOf="@+id/button9" />
+        app:layout_constraintTop_toBottomOf="@+id/button9"
+        app:strokeColor="@color/colorPrimaryLight" />
 
     <TextView
         android:id="@+id/textview_second"
